modificadas card productos en pagina main

--- a/index.html
+++ b/index.html
@@ -196,83 +196,94 @@
         <h3 class="text-center my-2 ">Productos Destacados</h3>
        
         <!--card-->
-        <article class="container d-flex text-center">
-          
+        <section class="container my-5">
           <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
-              <div class="card-header bg-dark">
-                <p class="text-light mt-3 fs-3">SCORPION-AT</p>
+            <div class="col-lg-4 col-md-6 col-sm-12 my-5">
+              <div class="card text-center">
+                <div class="card-header bg-dark">
+                  <p class="text-light mt-3 fs-3 modeloF">SCORPION-AT</p>
+                </div>
+                <div class="card-body bg-light">
+                  <img
+                    src="../img/SCORPION-AT.png"
+                    alt="rueda"
+                    class="w-100"
+                  />
+                </div>
+                <div class="card-footer bg-dark cardFooterDiv">
+                  <p class="text-light">
+                    Neumático todoterreno con gran versatilidad de uso en
+                    todo tipo de situaciones
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-primary mb-2"
+                    data-bs-toggle="modal"
+                    data-bs-target="#ModalProductos"
+                  >
+                    ver más
+                  </button>
+                </div>
               </div>
-              <div class="card-body bg-light">
-                <img src="../img/SCORPION-AT.png" alt="rueda" class="w-100" />
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 my-5">
+              <div class="card text-center">
+                <div class="card-header bg-dark">
+                  <p class="text-light mt-3 fs-3 modeloF">SCORPION-ATR</p>
+                </div>
+                <div class="card-body bg-light">
+                  <img
+                    src="../img/SCORPION-ATR.png"
+                    alt="rueda"
+                    class="w-100"
+                  />
+                </div>
+                <div class="card-footer bg-dark cardFooterDiv">
+                  <p class="text-light">
+                    El idolo de verano y numero uno en ventas, la mejor
+                    rueda de la actualidad
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-primary mb-2"
+                    data-bs-toggle="modal"
+                    data-bs-target="#ModalProductos"
+                  >
+                    ver más
+                  </button>
+                </div>
               </div>
-              <div class="card-footer cardFooterSide bg-dark">
-                <p class="text-light">
-                  Neumático todoterreno con gran versatilidad de uso en todo
-                  tipo de situaciones
-                </p>
-                <button
-                  type="button"
-                  class="btn btn-primary mb-2"
-                  data-bs-toggle="modal"
-                  data-bs-target="#ModalProductos"
-                >
-                  ver más
-                </button>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 my-5">
+              <div class="card text-center">
+                <div class="card-header bg-dark">
+                  <p class="text-light mt-3 fs-3 modeloF">TR999-1</p>
+                </div>
+                <div class="card-body bg-light">
+                  <img
+                    src="../img/TR999-1.png"
+                    alt="rueda"
+                    class="w-100"
+                  />
+                </div>
+                <div class="card-footer bg-dark">
+                  <p class="text-light">
+                    Garantiza un comportamiento deportivo en carretera,
+                    así como una excelente conducción todoterreno
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-primary mb-2"
+                    data-bs-toggle="modal"
+                    data-bs-target="#ModalProductos"
+                  >
+                    ver más
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
-              <div class="card-header bg-dark">
-                <p class="text-light mt-3 fs-3">SCORPION-ATR</p>
-              </div>
-              <div class="card-body bg-light">
-                <img src="../img/SCORPION-ATR.png" alt="rueda" class="w-100" />
-              </div>
-              <div class="card-footer cardFooterSide bg-dark">
-                <p class="text-light">
-                  El idolo de verano y numero uno en ventas, la mejor rueda de
-                  la actualidad cuenta con mas de 10 capas
-                </p>
-                <button
-                  type="button"
-                  class="btn btn-primary mb-2"
-                  data-bs-toggle="modal"
-                  data-bs-target="#ModalProductos"
-                >
-                  ver más
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 my-5">
-            <div class="card text-center">
-              <div class="card-header bg-dark">
-                <p class="text-light mt-3 fs-3">TR999-1</p>
-              </div>
-              <div class="card-body bg-light">
-                <img src="../img/TR999-1.png" alt="rueda" class="w-100" />
-              </div>
-              <div class="card-footer cardFooterSide bg-dark">
-                <p class="text-light">
-                  Garantiza un comportamiento deportivo en carretera, así como
-                  una excelente conducción todoterreno
-                </p>
-                <button
-                  type="button"
-                  class="btn btn-primary mb-2"
-                  data-bs-toggle="modal"
-                  data-bs-target="#ModalProductos"
-                >
-                  ver más
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        </article>
+        </section>
       </article>
 
         <!--video-->
