agregado modal login + correcciones de rutas

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -75,14 +75,11 @@
                 Buscar
               </button>
             </form>
-            <button
-              class="btn btn-outline-success me-2 btn-nav"
-              title="Iniciar sesion"
-            >
-              <a class="page-link" href="../index.html"
-                ><i class="bi bi-box-arrow-in-right"></i
-              ></a>
-            </button>
+            <!-- Boton login - reemplazar en boton del nav-->
+<button class="btn btn-outline-success me-2 btn-nav" title="Iniciar sesion" data-bs-toggle="modal"
+data-bs-target="#ModalLogin">
+<i class="bi bi-box-arrow-in-right"></i>
+</button>
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Registrarse"
@@ -356,5 +353,47 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <!-- Modal login agregar a todas las paginas-->
+<div class="modal fade" id="ModalLogin" tabindex="-1" aria-labelledby="exampleModallo" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header text-bg-dark">
+
+              <h5 class="modal-title h5">Iniciar sesion</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                  aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form>
+                  <div class="mb-3">
+                      <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                          required minlength="10" maxlength="320">
+                      <div id="emailHelp" class="form-text"></div>
+                  </div>
+                  <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1" required minlength="8"
+                          maxlength="64">
+                  </div>
+                  <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Recordar</label>
+                  </div>
+
+                  <p>Es tu primera vez? <span><a href="./pages/registro.html">Registrate</a></span></p>
+                  <div class="d-grid gap-2">
+                      <button type="submit" class="btn btn-primary mx-3">Iniciar sesion</button>
+                      <button type="submit" class="btn btn-dark mx-3"><i class="bi bi-google"></i> Continuar con
+                          Google</button>
+
+                  </div>
+
+              </form>
+          </div>
+
+      </div>
+  </div>
+</div>
   </body>
 </html>
