--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,9 +20,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/contacto.css" />
     <title>Contacto</title>
@@ -53,14 +56,14 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="./productos.html">Productos</a>
+                <a class="nav-link" href="./productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/error404.html">Nosotros</a>
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                <a class="nav-link active" href="./contacto.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex m-lg-4" role="search">
@@ -74,13 +77,14 @@
                 Buscar
               </button>
             </form>
+            <!-- Boton login - reemplazar en boton del nav-->
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Iniciar sesion"
+              data-bs-toggle="modal"
+              data-bs-target="#ModalLogin"
             >
-              <a class="page-link" href="./login.html"
-                ><i class="bi bi-box-arrow-in-right"></i
-              ></a>
+              <i class="bi bi-box-arrow-in-right"></i>
             </button>
             <button
               class="btn btn-outline-success me-2 btn-nav"
@@ -121,9 +125,7 @@
             </div>
 
             <div class="mb-3">
-              <label for="email" class="form-label text-white"
-                >Email:</label
-              >
+              <label for="email" class="form-label text-white">Email:</label>
               <input
                 type="email"
                 class="form-control"
@@ -136,9 +138,7 @@
             </div>
 
             <div class="mb-3">
-              <label  class="form-label text-white"
-                >Asunto:</label
-              >
+              <label class="form-label text-white">Asunto:</label>
               <input
                 type="text"
                 class="form-control"
@@ -151,9 +151,7 @@
             </div>
 
             <div class="mb-3">
-              <label
-                for="consulta"
-                class="form-label text-white"
+              <label for="consulta" class="form-label text-white"
                 >Consulta:</label
               >
               <textarea
@@ -240,10 +238,12 @@
                   <p
                     href="./pages/error404.html"
                     class="link-light link-underline-opacity-0 link-underline-opacity-100-hover"
-                    ><i class="bi bi-geo-alt-fill">
+                  >
+                    <i class="bi bi-geo-alt-fill">
                       Gral. Paz 576, T4000 San Miguel de Tucumán, Tucumán,
                       Argentina</i
-                    ></p>
+                    >
+                  </p>
                 </li>
               </ul>
 
@@ -559,6 +559,83 @@
             >
               Cerrar
             </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal login agregar a todas las paginas-->
+    <div
+      class="modal fade"
+      id="ModalLogin"
+      tabindex="-1"
+      aria-labelledby="exampleModallo"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header text-bg-dark">
+            <h5 class="modal-title h5">Iniciar sesion</h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label"
+                  >Correo electronico</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  required
+                  minlength="10"
+                  maxlength="320"
+                />
+                <div id="emailHelp" class="form-text"></div>
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label"
+                  >Contraseña</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="exampleInputPassword1"
+                  required
+                  minlength="8"
+                  maxlength="64"
+                />
+              </div>
+              <div class="mb-3 form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input"
+                  id="exampleCheck1"
+                />
+                <label class="form-check-label" for="exampleCheck1"
+                  >Recordar</label
+                >
+              </div>
+
+              <p>
+                Es tu primera vez?
+                <span><a href="./pages/registro.html">Registrate</a></span>
+              </p>
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary mx-3">
+                  Iniciar sesion
+                </button>
+                <button type="submit" class="btn btn-dark mx-3">
+                  <i class="bi bi-google"></i> Continuar con Google
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
