modificadas rutas modal login 'registrate'

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -503,7 +503,7 @@ title="Registrarse"
                       <label class="form-check-label" for="exampleCheck1">Recordar</label>
                   </div>
 
-                  <p>Es tu primera vez? <span><a href="./pages/registro.html">Registrate</a></span></p>
+                  <p>Es tu primera vez? <span><a href="./registro.html">Registrate</a></span></p>
                   <div class="d-grid gap-2">
                       <button type="submit" class="btn btn-primary mx-3">Iniciar sesion</button>
                       <button type="submit" class="btn btn-dark mx-3"><i class="bi bi-google"></i> Continuar con
