--- a/pages/productos.html
+++ b/pages/productos.html
@@ -973,7 +973,7 @@
 
               <p>
                 Es tu primera vez?
-                <span><a href="./pages/registro.html">Registrate</a></span>
+                <span><a href="./registro.html">Registrate</a></span>
               </p>
               <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-primary mx-3">
