agregue las ventanas modales de los productos y estilice la pagina de nosotros(faltan 2 fotos)

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -149,8 +149,8 @@
         <div class="carousel-inner">
           <div class="carousel-item active text-center bg-dark-subtle">
             <img
-              src="../img/fotoMia.jpg"
-              class="img-fluid rounded-circle border border-3 border-warning-subtle"
+              src="../img/fotoBovi.jpg"
+              class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
@@ -159,8 +159,8 @@
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
             <img
-              src="../img/fotoMia.jpg"
-              class="img-fluid rounded-circle border border-3 border-warning-subtle"
+              src="../img/fotoPablo.jpg"
+              class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
@@ -169,8 +169,8 @@
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
             <img
-              src="../img/fotoMia.jpg"
-              class="img-fluid rounded-circle border border-3 border-warning-subtle"
+              src="../img/fotoSanti.png"
+              class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
@@ -179,8 +179,8 @@
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
             <img
-              src="../img/fotoMia.jpg"
-              class="img-fluid rounded-circle border border-3 border-warning-subtle"
+              src="../img/fotoBovi.jpg"
+              class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
@@ -189,8 +189,8 @@
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
             <img
-              src="../img/fotoMia.jpg"
-              class="img-fluid rounded-circle border border-3 border-warning-subtle"
+              src="../img/fotoBovi.jpg"
+              class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
