--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,7 +33,7 @@
     <header>
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
-          <a class="navbar-brand" href="index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img class="img-fluid logo" src="../img/logo.png" alt=""
           /></a>
           <button
@@ -164,7 +164,7 @@
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
-              <p class="carouselNosotros">José Bovi</p>
+              <p class="carouselNosotros">Pablo Gonzalez</p>
             </div>
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
@@ -174,7 +174,7 @@
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
-              <p class="carouselNosotros">José Bovi</p>
+              <p class="carouselNosotros">Manu Santi Araoz</p>
             </div>
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
@@ -184,7 +184,7 @@
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
-              <p class="carouselNosotros">José Bovi</p>
+              <p class="carouselNosotros">Thiago Fiol</p>
             </div>
           </div>
           <div class="carousel-item text-center bg-dark-subtle">
@@ -194,7 +194,7 @@
               alt="Foto de Miembro del Equipo"
             />
             <div class="carousel-caption d-block d-md-block">
-              <p class="carouselNosotros">José Bovi</p>
+              <p class="carouselNosotros">Ramiro Velásquez</p>
             </div>
           </div>
         </div>
