cambio fondo a white

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -147,7 +147,7 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active text-center bg-dark-subtle">
+          <div class="carousel-item active text-center bg-white">
             <img
               src="../img/fotoBovi.jpg"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
@@ -157,7 +157,7 @@
               <p class="carouselNosotros">José Bovi</p>
             </div>
           </div>
-          <div class="carousel-item text-center bg-dark-subtle">
+          <div class="carousel-item text-center bg-white">
             <img
               src="../img/fotoPablo.jpg"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
@@ -167,7 +167,7 @@
               <p class="carouselNosotros">Pablo Gonzalez</p>
             </div>
           </div>
-          <div class="carousel-item text-center bg-dark-subtle">
+          <div class="carousel-item text-center bg-white">
             <img
               src="../img/fotoSanti.png"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
@@ -177,7 +177,7 @@
               <p class="carouselNosotros">Manu Santi Araoz</p>
             </div>
           </div>
-          <div class="carousel-item text-center bg-dark-subtle">
+          <div class="carousel-item text-center bg-white">
             <img
               src="../img/fotoBovi.jpg"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
@@ -187,7 +187,7 @@
               <p class="carouselNosotros">Thiago Fiol</p>
             </div>
           </div>
-          <div class="carousel-item text-center bg-dark-subtle">
+          <div class="carousel-item text-center bg-white">
             <img
               src="../img/fotoBovi.jpg"
               class="img-fluid imagenNosotros rounded-circle border border-3 border-warning-subtle"
