--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -103,8 +103,8 @@
     <main>
       <section class="container">
         <h5 class="text-center my-4 display-2">Acerca de Nosotros</h5>
-        <p class="lead display-5 fst-italic text-center">
-          "Una Frase muy de nuestro equipo"
+        <p class="lead display-6 fst-italic text-center">
+          “Siempre escribe tu código como si la persona que lo fuera a mantener fuera un peligroso psicópata que sabe quien eres y donde vives”
         </p>
       </section>
       <section
